--- a/our-team/index.html
+++ b/our-team/index.html
@@ -511,7 +511,14 @@ src="https://www.facebook.com/tr?id=516929400053855&amp;ev=PageView&amp;noscript
 	<li id="menu-item-4514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4514 stm_col_width_default stm_mega_cols_inside_default"><a href="../contacts/index.html">Contact Us</a></li>
 </ul>
 </li>
-<li id="menu-item-4518" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4518"><a href="../our-services/index.html">Services</a></li>
+<li id="menu-item-4513" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4513"><a href="../about-us/index.html">Services</a>
+	<ul class="sub-menu">
+		<li id="menu-item-4516" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4516 stm_col_width_default stm_mega_cols_inside_default"><a href="../mobile-app-dev/index.html">Mobile App Development</a></li>
+		<li id="menu-item-4597" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4597 stm_col_width_default stm_mega_cols_inside_default"><a href="../web-dev/index.html">Web Development</a></li>
+		<li id="menu-item-4514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4514 stm_col_width_default stm_mega_cols_inside_default"><a href="../di-marketing/index.html">Digital Marketing</a></li>
+		<li id="menu-item-4514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4514 stm_col_width_default stm_mega_cols_inside_default"><a href="../virtual/index.html">360 Virtual Tours</a></li>
+	</ul>
+</li>
 <li id="menu-item-4522" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4522"><a href="../our-cases/index.html">Cases</a></li>
 <li id="menu-item-5311" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5311"><a href="../blog/index.html">Blog</a></li>
         </ul>
