--- a/di-marketing/index.html
+++ b/di-marketing/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="pingback" href="../xmlrpc.php">
-	<title>Our Services - Kotlead</title>
+	<title>Digital Marketing - Kotlead</title>
 	<style type="text/css" media="screen"></style>
 	<!-- All in One SEO Pro 4.3.8 - aioseo.com -->
 	<meta name="description"
@@ -1028,7 +1028,7 @@
 										</li>
 										<li id="menu-item-4513"
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4513">
-											<a href="../about-us/index.html">Our Services</a>
+											<a href="../about-us/index.html">Services</a>
 											<ul class="sub-menu">
 												<li id="menu-item-4516"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4516 stm_col_width_default stm_mega_cols_inside_default">
@@ -1036,7 +1036,7 @@
 												</li>
 												<li id="menu-item-4597"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4597 stm_col_width_default stm_mega_cols_inside_default">
-													<a href="../web-dev/index.html">Web Development</a></li>
+													<a href="../web-dev/index.html">Website Development</a></li>
 												<li id="menu-item-4514"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4514 stm_col_width_default stm_mega_cols_inside_default">
 													<a href="../di-marketing/index.html">Digital Marketing</a></li>
