--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="pingback" href="../xmlrpc.php">
-	<title>Our Services - Kotlead</title>
+	<title>Website Development - Kotlead</title>
 	<style type="text/css" media="screen"></style>
 	<!-- All in One SEO Pro 4.3.8 - aioseo.com -->
 	<meta name="description"
@@ -21,7 +21,7 @@
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:site_name" content="Kotlead - Digital Marketing" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Our Services - Kotlead" />
+	<meta property="og:title" content="Website Development - Kotlead" />
 	<meta property="og:description"
 		content="Kotlead is a dynamic, agile, and data-driven digital marketing business that does not rely on gimmicks to attract new clients. We are not a static organization. We don’t limit ourselves to specific industries. Kotlead has the experience and professionals to build a result-oriented marketing strategy and use multiple MarTech tools to assist any size company in any industry. Paid Advertising" />
 	<meta property="og:url" content="https://kotlead.com/our-services/" />
@@ -1028,7 +1028,7 @@
 										</li>
 										<li id="menu-item-4513"
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4513">
-											<a href="../about-us/index.html">Our Services</a>
+											<a href="../about-us/index.html">Services</a>
 											<ul class="sub-menu">
 												<li id="menu-item-4516"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4516 stm_col_width_default stm_mega_cols_inside_default">
@@ -1036,7 +1036,7 @@
 												</li>
 												<li id="menu-item-4597"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4597 stm_col_width_default stm_mega_cols_inside_default">
-													<a href="../web-dev/index.html">Web Development</a></li>
+													<a href="../web-dev/index.html">Website Development</a></li>
 												<li id="menu-item-4514"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4514 stm_col_width_default stm_mega_cols_inside_default">
 													<a href="../di-marketing/index.html">Digital Marketing</a></li>
