--- a/virtual/index.html
+++ b/virtual/index.html
@@ -1154,6 +1154,20 @@
 
 							<div data-elementor-type="wp-page" data-elementor-id="2270"
 								class="elementor elementor-2270">
+								<section class="morph-collection">
+									<div class="collection-container" id="Digibrand">
+										<div class="morph-collection-bgimg"><video autoplay loop inline="true" width="100%"
+												style="margin-top: 35px;">
+												<source src="../media/PAnda world tour.mp4" type="video/mp4">
+											</video></div>
+										<div class="morph-collection-detail">
+											<div class="morph-collection-card"><img src="images/ticket-img.png"
+													alt="Digicollect" style="scale: 0.8; margin-left: auto;"></div>
+											<div class="morpht-collection-circle"><img src="images/circle-img.webp"
+													alt="Digicollect"></div>
+										</div>
+									</div>
+								</section>
 								<section
 									class="elementor-section elementor-top-section elementor-element elementor-element-8ad4c6f elementor-section-content-middle elementor-section-full_width elementor-reverse-mobile elementor-reverse-tablet elementor-section-height-default elementor-section-height-default"
 									data-id="8ad4c6f" data-element_type="section"
