--- a/mobile-app-dev/index.html
+++ b/mobile-app-dev/index.html
@@ -1168,8 +1168,8 @@
       --color-gray-10: #e2e5e9;
       --color-gray-1: #f2f5f7;
       --color-white: #ffffff;
-      --color-green: #00d563;
-      --color-green-light: #9feec4;
+      --color-green: #ff6666;
+      --color-green-light: #ff6666;
       --color-red: #e64c4c;
       --color-yellow: #f5b100;
       --color-purple: #a35bff;
@@ -10922,7 +10922,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-          --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Law.svg);
+          --icon-url: url(../hubfs/images/ico/new-careers/focus_product.png);
           --icon-width: 3.2rem;
           --icon-height: 3.2rem
         " role="img" aria-label="Fintech icon"></span>
@@ -10988,7 +10988,7 @@
                 <div class="icon-tile__icon">
 
                     <span class="icon" style="
-        --icon-url: url(../hubfs/Imported%20sitepage%20images/10_icon_BLP_brandbook.svg);
+          --icon-url: url(../hubfs/images/ico/new-case-study/results_icon.png);
         --icon-width: 40.0rem;
         --icon-height: 40.0rem
       " role="img" aria-label="Education icon"></span>
