--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -1168,8 +1168,8 @@
       --color-gray-10: #e2e5e9;
       --color-gray-1: #f2f5f7;
       --color-white: #ffffff;
-      --color-green: #00d563;
-      --color-green-light: #9feec4;
+      --color-green: #ff6666;
+      --color-green-light: #ff6666;
       --color-red: #e64c4c;
       --color-yellow: #f5b100;
       --color-purple: #a35bff;
@@ -10675,7 +10675,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Globe.svg);
+      --icon-url: url(../hubfs/images/ico/icons8-website.gif);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="digital globe icon"></span>
@@ -10717,7 +10717,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Real-estate.svg);
+      --icon-url: url(../hubfs/images/ico/icons8-application-50.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="web app icon"></span>
@@ -10738,7 +10738,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Graphics-tablet.svg);
+      --icon-url: url(../hubfs/images/ico/icons8-content-50.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="CMS icon"></span>
@@ -10850,7 +10850,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/UX.svg);
+      --icon-url: url(../hubfs/images/ico/frontend.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="Frontend Development icon"></span>
@@ -10871,7 +10871,8 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Structure.svg);
+                  
+      --icon-url: url(../hubfs/images/ico/icons8-backend.gif);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="Backend Development icon"></span>
@@ -10892,7 +10893,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Process.svg);
+      --icon-url: url(../hubfs/images/ico/icons8-stack-50.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="Full Stack Development icon"></span>
@@ -10913,7 +10914,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Mobile.svg);
+      --icon-url: url(../hubfs/images/ico/icons8-software-license-50.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="Low-Code Development icon"></span>
@@ -10938,7 +10939,7 @@
                 <div class="icon-tile__icon">
 
                   <span class="icon" style="
-      --icon-url: url(../hubfs/_N19%20Modules/Icons/Benefits%20icons%20to%20use%20on%20landing%20pages/Cloud.svg);
+      --icon-url: url(../hubfs/images/ico/new-careers/focus_product.png);
       --icon-width: 3.2rem;
       --icon-height: 3.2rem
     " role="img" aria-label="Cloud"></span>
