--- a/mobile-app-dev/index.html
+++ b/mobile-app-dev/index.html
@@ -2925,14 +2925,14 @@
       }
     }
 
-    @media(hover: hover),
+    /* @media(hover: hover),
     not all and (-moz-touch-enabled),
     (-ms-high-contrast:none) {
       .main-navbar .navbar__menu .hs-menu-depth-1: hover>a, .main-navbar .navbar__menu .hs-menu-depth-2>a:hover:not([href="javascript:;"]) {
         color: var(--color-brand);
         transition: color var(--duration-fast)
       }
-    }
+    } */
 
     .main-navbar .navbar__menu .hs-menu-depth-1 {
       --navbar-submenu-padding: 0 max(var(--wrapper-padding), calc((100vw - var(--wrapper-max-width)) / 2));
